fixed the spacing between the sections and working on type

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -1,6 +1,14 @@
 @import "contactCard";
 @import "sharingButtons";
 
+// Universal Elements //
+
+h1 {
+	margin-top: 5%;
+}
+
+// Specifics and Classes //
+
 #top {
 	color: white;
 	margin-bottom: 50%;
@@ -25,6 +33,7 @@
 		width: 100%;
 	}
 }
+
 
 @media screen and (min-width: 500px) {
 
